apps/base/dolt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dolt
