apps/base/dolt/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dolt
  namespace: dolt
  labels:
    app.kubernetes.io/name: dolt
spec:
  serviceName: dolt
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dolt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dolt
    spec:
      containers:
        - name: dolt
          image: dolthub/dolt-sql-server:2.2.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: dolt-data
              mountPath: /var/lib/dolt
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "2000m"
              memory: "2Gi"
  volumeClaimTemplates:
    - metadata:
        name: dolt-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "local-path"
        resources:
          requests:
            storage: 10Gi
