apps/base/dolt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dolt
  namespace: dolt
  labels:
    app.kubernetes.io/name: dolt
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  selector:
    app.kubernetes.io/name: dolt
