apps/base/dolt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dolt
  namespace: dolt
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: dolt.fog.chalko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dolt
                port:
                  number: 3306
  tls:
    - hosts:
        - dolt.fog.chalko.com
      secretName: dolt-tls
